refactor: rename package to eam.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,9 @@ S3method(plot_cv_pair_correlation, cv4abc)
 S3method(plot_cv_recovery, cv4abc)
 S3method(plot_posterior_parameters, abc)
 S3method(summarise_posterior_parameters, abc)
-S3method(print, multieam_simulation_config)
-S3method(print, multieam_summarise_by_spec)
-S3method("+", multieam_summarise_by_tbl)
-S3method("+", multieam_summarise_by_spec)
-useDynLib(multieam)
+S3method(print, eam_simulation_config)
+S3method(print, eam_summarise_by_spec)
+S3method("+", eam_summarise_by_tbl)
+S3method("+", eam_summarise_by_spec)
+useDynLib(eam)
 importFrom(Rcpp, sourceCpp)
