--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -40,41 +40,8 @@ jobs:
           extra-packages: any::pkgdown, local::.
           needs: website
 
-      - name: Build pkgdown site (lazy, no clean)
-        run: |
-          pkgdown::init_site()
-
-          pkgdown::build_home()
-
-          pkgdown::build_reference(
-            devel = FALSE,
-            run_dont_run = FALSE,
-            lazy = TRUE
-          )
-
-          pkgdown::build_articles(
-            lazy = TRUE
-          )
-
-          # pkgdown::build_tutorials(
-          #   lazy = TRUE,
-          #   seed = 1014L
-          # )
-
-          pkgdown::build_news()
-          pkgdown::build_redirects()
-          pkgdown::build_llm_docs()
-
-          # ---- build_site_github_pages() side effects:
-
-          # Ensure GitHub Pages doesn't try to run Jekyll
-          # file.create("docs/.nojekyll")
-
-          # Ensure CNAME is present if you use a custom domain
-          # if (!is.null(pkgdown::metadata()$url)) {
-          #   domain <- sub("^https?://", "", pkgdown::metadata()$url)
-          #   writeLines(domain, "docs/CNAME")
-          # }
+      - name: Build pkgdown site (lazy)
+        run: pkgdown::build_site_github_pages(new_process = FALSE, install = FALSE, lazy = TRUE)
         shell: Rscript {0}
 
       - name: Deploy to GitHub pages 🚀
