--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,10 @@ R/RcppExports.R
 # TODO: remove and add before release to CRAN
 man/
 inst/extdata
-docs
+
+# allow manually compiled vignettes
+docs/**
+!docs/articles/
+!docs/articles/**
+docs/articles/index.md
+docs/articles/index.html
