--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -69,4 +69,4 @@ Config/testthat/edition: 3
 RoxygenNote: 7.3.3
 Depends: 
     R (>= 4.1.0)
-URL: https://github.com/y-guang/eam
+URL: https://y-guang.github.io/eam, https://github.com/y-guang/eam
