docs(abi_input): upload generated docsfor building ABI input funcs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(abc_posterior_bootstrap)
 export(abc_postpr)
 export(abc_resample)
 export(build_abc_input)
+export(build_abi_input)
 export(load_simulation_output)
 export(map_by_condition)
 export(new_simulation_config)
